...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onRefresh="@{viewmodel}"
        app:refreshing="@{viewmodel.isDataLoading}">

        <RelativeLayout
            android:id="@+id/tasksContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
...
